libview: Keep the scroll position when switching between continuous and non continuous mode

https://bugzilla.gnome.org/show_bug.cgi?id=554843